--- a/src/app/project/project-overview/project-overview.component.html
+++ b/src/app/project/project-overview/project-overview.component.html
@@ -6,7 +6,7 @@
         *ngIf="project">
         <as-profile-template [image]="project.photo">
             <as-profile-title>
-                <span class="last-name">{{project.title}}</span><span class="last-name">: {{project.subtitle}}</span>
+                <span class="title">{{project.title}}</span><span class="subtitle">: {{project.subtitle}}</span>
             </as-profile-title>
             <as-profile-details>
                 <div class="detail-items" fxLayout="row" fxLayout="space-between center">
