--- a/src/app/about/about-work/about-work.component.scss
+++ b/src/app/about/about-work/about-work.component.scss
@@ -6,7 +6,7 @@
 }
 
 as-profile-title {
-    font-size: $large-font-size-xs;
+    font-size: $font-size-xxxl;
 
     .first-name {
         color: $theme-dark-dark;
@@ -29,6 +29,7 @@ as-profile-details {
     }
 
     .detail-item {
+        font-weight: $font-weight-lightest;
         padding: 0.25em;
         font-size: $font-size-xl;
         margin-right: 1em;
