--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -10,42 +10,49 @@
         $theme-dark 4px
     );
     color: $theme-background;
-    padding: 2rem;
+    padding: 2rem 0.25rem;
+}
+
+.content {
+    padding: 0 0.25rem;
 }
 
 ul {
-    padding: 0.25em 0;
-    margin: 0;
+    max-width: 70px;
+    padding: 0;
+    border-radius: 4px;
+    margin: 0.5rem 0.25rem;
     color: $theme-light;
-    font-size: $font-size-lg;
+    font-size: $font-size-xs;
+    font-stretch: extra-condensed;
+    background-color: $theme-dark;
 }
 
 li {
     padding: 0;
     list-style: none;
+
+    &:not(:last-child) {
+        border-bottom: 1px solid $theme-dark-dark;
+    }
 }
 
 a {
     cursor: pointer;
     display: block;
-    padding: 8px 2px;
-    margin: 0 10px;
+    padding: 8px;
+    margin: 0;
     color: inherit;
     text-decoration: none;
     outline: none;
-    border-top: 2px solid transparent;
-    border-bottom: 2px solid transparent;
-    text-transform: uppercase;
-    font-family: 'PT Mono', 'Courier New', Courier, monospace;
+    border-left: 5px solid transparent;
 
     &:hover {
         color: $theme-primary;
-        border-top: 2px solid $theme-primary;
-        border-bottom: 2px solid $theme-primary;
     }
 
     &.active {
         color: $theme-primary;
-        border-bottom: 2px solid $theme-primary;
+        border-left: 5px solid $theme-primary;
     }
 }
