Minor style position corrections

--- a/src/app/about/about-work/about-work.component.html
+++ b/src/app/about/about-work/about-work.component.html
@@ -6,7 +6,7 @@
         *ngIf="job">
         <as-profile-template [image]="job.photo" >
             <as-profile-title>
-                <span class="last-name">{{job.company}}</span>
+                <span class="company">{{job.company}}</span>
             </as-profile-title>
             <as-profile-details>
                 <div class="detail-items" fxLayout="row" fxLayout="space-between center">
