--- a/src/app/footer/footer-copyright/footer-copyright.component.html
+++ b/src/app/footer/footer-copyright/footer-copyright.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
-    <div>&copy; {{year}} {{name}}</div>
-
-    <div>
-        All graphics, icons and layouts used were designed by me.
-    </div>
+    <p>&copy; {{year}} {{name}}</p>
+    <p>All rights reserved.</p>
+    <p>
+        Graphics, icons and layouts used were designed by me.
+    </p>
 </div>
