--- a/src/app/about/about-personal/about-personal.component.scss
+++ b/src/app/about/about-personal/about-personal.component.scss
@@ -10,12 +10,10 @@ as-profile-title {
 
     .first-name {
         color: $theme-light;
-        font-weight: $font-weight-lightest;
     }
 
     .last-name {
         color: $theme-light;
-        font-weight: $font-weight-normal;
     }
 }
 
@@ -29,9 +27,8 @@ as-profile-details {
     }
 
     .detail-item {
-        font-weight: $font-weight-lightest;
         padding: 0.25em;
-        font-size: $font-size-xl;
+        font-size: $font-size-md;
         margin-right: 1em;
     }
 }
