--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,28 +1,9 @@
 @import '~sass/styles.scss';
 
-#about {
-    background-color: $theme-dark-dark;
-    background: repeating-linear-gradient(
-        45deg,
-        $theme-dark-dark,
-        $theme-dark-dark 2px,
-        $theme-dark 2px,
-        $theme-dark 4px
-    );
-    color: $theme-background;
-    padding: 2rem 0.25rem;
-}
-
-.content,
-.sidebar {
-    padding: 0 0.25rem;
-    margin: 0 auto;
-}
-
 ul {
     max-width: 70px;
     padding: 0;
-    margin: 0.5rem;
+    margin: 0.5rem 0;
     border-radius: 4px;
     color: $theme-light;
     font-size: $font-size-xs;
