--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
-@import '~sass/styles.scss';
+@import '~scss/styles.scss';
 
 footer {
-    padding: 0.5rem;
-    border-top: 1px solid $theme-dark;
-    margin-top: 1px;
+  padding: 0.5rem;
+  border-top: 1px solid $theme-dark;
+  margin-top: 1px;
 }
