--- a/src/app/shared/image/image-list/image-list.component.scss
+++ b/src/app/shared/image/image-list/image-list.component.scss
@@ -1,7 +1,7 @@
-@import '~sass/styles.scss';
+@import '~scss/styles.scss';
 
 .images {
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 4px;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 4px;
 }
