--- a/src/app/shared/image/image-thumbnail/image-thumbnail.component.html
+++ b/src/app/shared/image/image-thumbnail/image-thumbnail.component.html
@@ -1,11 +1,12 @@
 <div
-    [ngClass]="imageClass()"
-    class="image-container">
+  [ngClass]="imageClass()"
+  class="image-container">
+  <div
+    [ngStyle]="imageStyle()"
+    class="image">
     <div
-        [ngStyle]="imageStyle()"
-        class="image">
-        <div
-            *ngIf="gradient"
-            class="gradient"></div>
+      *ngIf="gradient"
+      class="gradient">
     </div>
+  </div>
 </div>
