--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,21 +1,25 @@
 <div id="about" fxLayout="row">
-    <div class="sidebar">
-        <ul fxLayout="column" fxLayoutAlign="start stretch" id="nav">
-            <li>
-                <a
-                    [routerLink]="['profile']"
-                    routerLinkActive="active"
-                    [routerLinkActiveOptions]="{exact: true}">Myself</a>
-            </li>
-            <li *ngFor="let job of jobs()">
-                <a
-                    [routerLink]="['work', job.id]"
-                    routerLinkActive="active"
-                    [routerLinkActiveOptions]="{exact: true}">{{job.company}}</a>
-            </li>
-        </ul>
-    </div>
-    <div class="content">
-        <router-outlet></router-outlet>
-    </div>
+  <div class="sidebar">
+    <ul fxLayout="column" fxLayoutAlign="start stretch" id="nav">
+      <li>
+        <a
+          [routerLink]="['profile']"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}">
+          Myself
+        </a>
+      </li>
+      <li *ngFor="let job of jobs()">
+        <a
+          [routerLink]="['work', job.id]"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}">
+          {{job.company}}
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
