--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,60 +1,60 @@
-@import '~sass/styles.scss';
+@import '~scss/styles.scss';
 
 #about {
-    background-color: $theme-dark-dark;
-    background: repeating-linear-gradient(
-        45deg,
-        $theme-dark-dark,
-        $theme-dark-dark 2px,
-        $theme-dark 2px,
-        $theme-dark 4px
-    );
-    color: $theme-background;
-    padding: 2rem 0.25rem;
+  background-color: $theme-dark-dark;
+  background: repeating-linear-gradient(
+    45deg,
+    $theme-dark-dark,
+    $theme-dark-dark 2px,
+    $theme-dark 2px,
+    $theme-dark 4px
+  );
+  color: $theme-background;
+  padding: 2rem 0.25rem;
 }
 
 .content,
 .sidebar {
-    padding: 0 0.25rem;
-    margin: 0 auto;
+  padding: 0 0.25rem;
+  margin: 0 auto;
 }
 
 ul {
-    max-width: 70px;
-    padding: 0;
-    margin: 0.5rem;
-    border-radius: 4px;
-    color: $theme-light;
-    font-size: $font-size-xs;
-    font-stretch: extra-condensed;
-    background-color: $theme-dark;
+  max-width: 70px;
+  padding: 0;
+  margin: 0.5rem;
+  border-radius: 4px;
+  color: $theme-light;
+  font-size: $font-size-xs;
+  font-stretch: extra-condensed;
+  background-color: $theme-dark;
 }
 
 li {
-    padding: 0;
-    list-style: none;
+  padding: 0;
+  list-style: none;
 
-    &:not(:last-child) {
-        border-bottom: 1px solid $theme-dark-dark;
-    }
+  &:not(:last-child) {
+    border-bottom: 1px solid $theme-dark-dark;
+  }
 }
 
 a {
-    cursor: pointer;
-    display: block;
-    padding: 8px;
-    margin: 0;
-    color: inherit;
-    text-decoration: none;
-    outline: none;
-    border-left: 5px solid transparent;
+  cursor: pointer;
+  display: block;
+  padding: 8px;
+  margin: 0;
+  color: inherit;
+  text-decoration: none;
+  outline: none;
+  border-left: 5px solid transparent;
 
-    &:hover {
-        color: $theme-primary;
-    }
+  &:hover {
+    color: $theme-primary;
+  }
 
-    &.active {
-        color: $theme-primary;
-        border-left: 5px solid $theme-primary;
-    }
+  &.active {
+    color: $theme-primary;
+    border-left: 5px solid $theme-primary;
+  }
 }
