--- a/src/app/header/header-nav/header-nav.component.scss
+++ b/src/app/header/header-nav/header-nav.component.scss
@@ -1,56 +1,55 @@
-@import '~sass/styles.scss';
-
+@import '~scss/styles.scss';
 
 nav {
-    color: $theme-dark;
-    font-size: $font-size-lg;
+  color: $theme-dark;
+  font-size: $font-size-lg;
 
-    ul {
-        margin: 0;
-        padding: 0;
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    padding: 0;
+    list-style: none;
+  }
+
+  a {
+    cursor: pointer;
+    display: block;
+    padding: 8px 2px;
+    margin: 0 10px;
+    color: inherit;
+    text-decoration: none;
+    outline: none;
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    text-transform: uppercase;
+    font-family: 'PT Mono', 'Courier New', Courier, monospace;
+
+    &:hover {
+      color: $theme-primary;
+      border-top: 2px solid $theme-primary;
+      border-bottom: 2px solid $theme-primary;
     }
 
-    li {
-        padding: 0;
-        list-style: none;
+    &.active {
+      color: $theme-primary;
     }
-
-    a {
-        cursor: pointer;
-        display: block;
-        padding: 8px 2px;
-        margin: 0 10px;
-        color: inherit;
-        text-decoration: none;
-        outline: none;
-        border-top: 2px solid transparent;
-        border-bottom: 2px solid transparent;
-        text-transform: uppercase;
-        font-family: 'PT Mono', 'Courier New', Courier, monospace;
-
-        &:hover {
-            color: $theme-primary;
-            border-top: 2px solid $theme-primary;
-            border-bottom: 2px solid $theme-primary;
-        }
-
-        &.active {
-            color: $theme-primary;
-        }
-    }
+  }
 }
 
 .title {
-    text-align: center;
-    padding: 0 1rem;
-    font-size: $large-font-size-xs;
+  text-align: center;
+  padding: 0 1rem;
+  font-size: $large-font-size-xs;
 
-    .first-name {
-        color: $theme-dark;
-        font-weight: $font-weight-lightest;
-    }
+  .first-name {
+    color: $theme-dark;
+    font-weight: $font-weight-lightest;
+  }
 
-    .last-name {
-        color: $theme-dark-dark;
-    }
+  .last-name {
+    color: $theme-dark-dark;
+  }
 }
