--- a/src/app/shared/image/image-thumbnail/image-thumbnail.component.scss
+++ b/src/app/shared/image/image-thumbnail/image-thumbnail.component.scss
@@ -1,59 +1,59 @@
-@import '~sass/styles.scss';
+@import '~scss/styles.scss';
 
 .image-container {
-    margin: 4px;
-    overflow: hidden;
+  margin: 4px;
+  overflow: hidden;
 
-    &.border {
-        border: 1px solid $theme-background;
-    }
+  &.border {
+    border: 1px solid $theme-background;
+  }
 }
 
 .image,
 .gradient {
-    cursor: pointer;
-    background-position: center;
-    background-repeat: no-repeat;
+  cursor: pointer;
+  background-position: center;
+  background-repeat: no-repeat;
 
-    .landscape & {
-        width: 20rem;
-        height: 15rem;
-    }
+  .landscape & {
+    width: 20rem;
+    height: 15rem;
+  }
 
-    .portrait & {
-        width: 15rem;
-        height: 20rem;
-    }
+  .portrait & {
+    width: 15rem;
+    height: 20rem;
+  }
 
-    .square &,
-    .original & {
-        width: 20rem;
-        height: 20rem;
-    }
+  .square &,
+  .original & {
+    width: 20rem;
+    height: 20rem;
+  }
 
-    .landscape &,
-    .portrait &,
-    .square & {
-        background-size: cover;
-    }
+  .landscape &,
+  .portrait &,
+  .square & {
+    background-size: cover;
+  }
 
-    .original & {
-        background-size: contain;
-    }
+  .original & {
+    background-size: contain;
+  }
 }
 
 .image {
-    transition: transform $transition-time linear;
+  transition: transform $transition-time linear;
 
-    &:hover {
-        transform: scale(1.1);
-        .gradient {
-            opacity: 0;
-        }
+  &:hover {
+    transform: scale(1.1);
+    .gradient {
+      opacity: 0;
     }
+  }
 }
 
 .gradient {
-    transition: opacity $transition-time linear;
-    background-image: linear-gradient(rgba(64, 66, 64, 0.3), rgba(64, 66, 64, 0.1));
+  transition: opacity $transition-time linear;
+  background-image: linear-gradient(rgba(64, 66, 64, 0.3), rgba(64, 66, 64, 0.1));
 }
