--- a/src/app/shared/list/list-item/list-item.component.scss
+++ b/src/app/shared/list/list-item/list-item.component.scss
@@ -1,21 +1,21 @@
-@import '~sass/styles.scss';
+@import '~scss/styles.scss';
 
 .icon,
 .text {
-	padding: 0.5em;
+  padding: 0.5em;
 }
 
 .icon {
-	min-width: 3.5rem;
-	width: 3.5rem;
+  min-width: 3.5rem;
+  width: 3.5rem;
 	
-	img {
-		max-width: 100%;
-		max-height: 100%;
-	}
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
 h5,
 p {
-	text-align: left;
+  text-align: left;
 }
