--- a/src/app/shared/profile/profile-template/profile-template.component.scss
+++ b/src/app/shared/profile/profile-template/profile-template.component.scss
@@ -1,38 +1,38 @@
-@import '~sass/styles.scss';
+@import '~scss/styles.scss';
 
 .box {
-    margin: 0.5rem;
-    padding: 0.5rem;
-    background-color: $theme-dark;
-    border-radius: 4px;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  background-color: $theme-dark;
+  border-radius: 4px;
 
-    > * {
-        padding: 0.5rem;
-    }
+  > * {
+    padding: 0.5rem;
+  }
 }
 
 h5 {
-    font-size: $font-size-sm;
-    padding-bottom: 0.5rem;
-    text-transform: uppercase;
-    color: $theme-primary;
-    border-bottom: 1px solid $theme-primary;
+  font-size: $font-size-sm;
+  padding-bottom: 0.5rem;
+  text-transform: uppercase;
+  color: $theme-primary;
+  border-bottom: 1px solid $theme-primary;
 }
 
 .image-container {
-    background-color: $theme-primary-dark;
-    height: 150px;
-    width: 150px;
-    padding: 2px;
-    border-radius: 50%;
+  background-color: $theme-primary-dark;
+  height: 150px;
+  width: 150px;
+  padding: 2px;
+  border-radius: 50%;
 }
 
 img {
-    border-radius: 50%;
-    height: 100%;
-    width: 100%;
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
 }
 
 .overview {
-    width: 100%;
+  width: 100%;
 }
