--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 @import '~scss/styles.scss';
 
-header {
+#header {
   padding: 0.5rem;
   border-bottom: 1px solid $theme-dark;
   margin-bottom: 1px;
