--- a/src/app/footer/footer-copyright/footer-copyright.component.scss
+++ b/src/app/footer/footer-copyright/footer-copyright.component.scss
@@ -1,5 +1,5 @@
 @import '~scss/styles.scss';
 
-.wrapper {
-	padding: calc(0.25em + 8px) 0;
+.footer-copyright {
+  padding: calc(0.25em + 8px) 0;
 }
