--- a/src/app/footer/footer-links/footer-links.component.html
+++ b/src/app/footer/footer-links/footer-links.component.html
@@ -1,8 +1,8 @@
-<ul fxLayout="column">
-  <li>
-    <a href="https://www.linkedin.com/in/shortalla">LinkedIn</a>
+<ul class="footer-list" fxLayout="column">
+  <li class="footer-list__item">
+    <a class="footer-list__link" href="https://www.linkedin.com/in/shortalla">LinkedIn</a>
   </li>
-  <li>
-    <a href="https://github.com/shortalla">GitHub</a>
+  <li class="footer-list__item">
+    <a class="footer-list__link" href="https://github.com/shortalla">GitHub</a>
   </li>
 </ul>
