--- a/src/app/footer/footer-links/footer-links.component.scss
+++ b/src/app/footer/footer-links/footer-links.component.scss
@@ -1,25 +1,25 @@
 @import '~scss/styles.scss';
 
-ul {
+.footer-list {
   padding: 0.25em 0;
   margin: 0;
-}
 
-li {
-  padding: 0;
-  list-style: none;
-}
+  &__item {
+    padding: 0;
+    list-style: none;
+  }
 
-a {
-  cursor: pointer;
-  display: block;
-  padding: 8px 2px;
-  margin: 0 10px;
-  color: inherit;
-  text-decoration: none;
-  outline: none;
+  &__link {
+    cursor: pointer;
+    display: block;
+    padding: 8px 2px;
+    margin: 0 10px;
+    color: inherit;
+    text-decoration: none;
+    outline: none;
 
-  &:hover {
-    color: $theme-primary;
+    &:hover {
+      color: $theme-primary;
+    }
   }
 }
