--- a/src/app/about/about-personal/about-personal.component.html
+++ b/src/app/about/about-personal/about-personal.component.html
@@ -36,14 +36,16 @@
               <div fxLayout="row" fxLayoutAlign="start center">
                 <mat-icon
                   aria-label="Place of birth"
-                  svgIcon="as_place_of_birth"></mat-icon> <span>{{person.placeOfBirth}}</span>
+                  svgIcon="as_place_of_birth">
+                </mat-icon> <span>{{person.placeOfBirth}}</span>
               </div>
             </div>
             <div class="birthday detail-item">
               <div fxLayout="row" fxLayoutAlign="start center">
                 <mat-icon
                   aria-label="Birthday"
-                  svgIcon="as_birthday"></mat-icon> <span>{{person.dateOfBirth | date:'mediumDate'}}</span>
+                  svgIcon="as_birthday">
+                </mat-icon> <span>{{person.dateOfBirth | date:'mediumDate'}}</span>
               </div>
             </div>
           </div>
